Styled navigation bars and fixed some content spill issues by removing the center class

--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,47 @@
 
 body {
-    background-color: rgb(65, 30, 30);
+    background-color: rgb(249, 184, 184);
     display: flex;
     justify-content: center;
     flex-wrap: nowrap;
     width: 100%;
+    height: auto;
 }
 
-.center{
-    text-align: center;
-    padding-top: 5em;
-    background-color: rgb(249, 184, 184);
-}
 
 .nav{
     margin-left: auto;
     margin-right: auto;
-    width: 90vw;
+    width: 100vw;
     height: 30vw;
+    border: solid 1px rgb(249, 184, 184);
+    padding-top: 5em;
+    text-align: center;
+}
+.navitem {
+    width: 90%;
+    height: 50px;
+
+   
+
 }
 
 .button {
-    background-color: rgb(65, 30, 30); /* Green */
+    background-color: rgb(65, 30, 30); 
     border: none;
     color: white;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: auto;
-  }
+}
   
+
+.city{
+    background-color: white;
+    margin-left: 15px;
+    margin-right: 15px;
+}
 
 
 
@@ -66,9 +78,6 @@ textarea{
 
 
 
-
-
-
 /* Media Queries */
 
 @media (min-width: 769px){
@@ -89,6 +98,7 @@ textarea{
 @media (min-width: 1112px){
 	.nav {
 		max-width: 100%;
-		max-height: 35%;
+        max-height: 35%;
+        text-align: center;
     }
 }
